<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/home_title_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_track"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/movie"
            android:gravity="center"
            android:text="@string/sort_by_track"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_album"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/movie"
            android:gravity="center"
            android:text="@string/sort_by_album"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_singer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/movie"
            android:gravity="center"
            android:text="@string/singer"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:layout_marginTop="20dp">

        <ListView
            android:id="@+id/home_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dividerHeight="1dp"/>
    </LinearLayout>

</LinearLayout>